Closed Bug 637040 Opened 15 years ago Closed 15 years ago

iframe embedding youtube not displaying in os x

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: dherman, Assigned: mattwoodrow)

References

()

Details

(Keywords: regression, Whiteboard: [hardblocker][has patch])

Attachments

(2 files)

I updated to the latest nightly and tried again, but the embedded video at this page is still not displaying: http://blog.fishbone.net/everyday-sunshine-the-story-of-fishbone-offic It starts playing but there's no video. I'm on a MB Pro, OS X 10.6.6. When I go to the actual YouTube link the video plays fine. Dave
The product "Firefox" is basically only the Userinterface of the browser. A problem with the content of a website is in most cases the product "Core". wfm with Seamonkey trunk on win32, OS X only ?
Component: General → Plug-ins
Product: Firefox → Core
QA Contact: general → plugins
Version: 3.6 Branch → Trunk
> The product "Firefox" is basically only the Userinterface of the browser. A > problem with the content of a website is in most cases the product "Core". My bad -- still learning the products and components. > wfm with Seamonkey trunk on win32, OS X only ? I only have a Mac available to me right now, so I can't try it out elsewhere. Just to make sure, I reinstalled Flash and the site is still not working. It is working in other browsers, so it's not a bug in the site, or at least not an obvious one. Dave
I can reproduce this on Mac. The problem goes away if I disable GL acceleration.
Attached file Minimalish testcase
The text is needed. The bug also reproduces if I wrap a <div> around the text, as in the original site, but just using a fixed-height <div> does NOT show the bug. The background image is arbitrary; it being fixed is required, though.
And this is a somewhat recent regression.
blocking2.0: --- → ?
Component: Plug-ins → Graphics
Keywords: regression
QA Contact: plugins → thebes
This is WFM on OSX, latest nightly. Boris: can you still reproduce?
In order to reproduce you have to be not in the YouTube HTML5 beta.
Assignee: nobody → matt.woodrow+bugzilla
blocking2.0: ? → final+
Whiteboard: [hardblocker]
And you have to have GL acceleration actually enabled. And yes, I can reproduce on today's nightly.
Thanks for the testcase bz! (especially noticing that the fixed background caused it). Thebes layers with component alpha were changing the active texture to GL_TEXTURE1 and never resetting it. This makes us explicitly bind the texture we want for MacIOSurfaceImages and reset it in ThebesLayer. We don't really need both, but I don't see the harm.
Attachment #515777 - Flags: review?(joe)
Whiteboard: [hardblocker] → [hardblocker][has patch]
Comment on attachment 515777 [details] [diff] [review] Reset the active texture Can this be tested automatically using the test plugin, and perhaps a white background image?
Our test plugin doesn't use core animation and wouldn't hit this bug sadly. That may be an issue in it's own right.
Comment on attachment 515777 [details] [diff] [review] Reset the active texture no-brainer
Attachment #515777 - Flags: review?(joe)
Attachment #515777 - Flags: review+
Attachment #515777 - Flags: approval2.0+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Verified on Build identifier: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0) Gecko/20100101 Firefox/4.0
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: