Bug 637040 - Set the correct active texture unit for plugin layers. r=roc a=blocking2.0